traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:17: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    gauche()
    ^Snake:18: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (estFaceMur()) {
    ^Snake:24: error: '=' expected but 'else' found.
  } else if (getDirection() == Direction.OUEST) {
    ^Snake:29: error: illegal start of simple expression
} 
^Snake:31: error: Unmatched closing brace '}' ignored here
}
^